# aubergeRP

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.standalone  Dockerfile.standalone.dockerignore  Makefile  README.md  TODO.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sprints.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  (+2 more)
aubergeRP/: __init__.py  config.py  constants.py  database.py  db_models.py  event_bus.py  main.py  scheduler.py
docker/: docker-compose.localai.yml  docker-compose.ollama.yml  docker-compose.yml
docs/: 00-architecture-overview.md  01-technology-stack.md  02-project-structure.md  03-backend-api.md  04-character-system.md  05-chat-and-conversations.md  06-comfyui-integration.md  06-connector-system.md  07-frontend-chat-ui.md  08-admin-interface.md  09-configuration-and-setup.md  POST-MVP.md  installation-guide.md
frontend/: index.html
scripts/: generate_api_docs.py
tests/: conftest.py  test_admin_auth_rate_limit.py  test_admin_customization_and_plugin_system.py  test_admin_gui_customization.py  test_ai_quality_summarization_ooc_and_toolcalling.py  test_api_characters.py  test_api_chat.py  test_api_config.py  test_api_connectors.py  test_api_media.py  test_api_statistics.py  test_character_service.py  test_chat_service.py  test_comfyui_connector.py  test_config.py  test_config_patch_health_and_connector_activation.py  test_connector_manager.py  test_conversation_service.py  test_docs_api_reference_cors_and_sentry.py  test_example_seed_service.py  test_file_storage.py  test_infrastructure_env_cleanup_db_and_migrations.py  test_models.py  test_openai_image.py  test_openai_text.py  test_png_metadata.py  test_session_token_conversation_ownership_and_event_bus.py  test_sprint12.py  test_sprint13.py  test_sprint15.py  test_sprint16.py  test_sprint17.py  test_sprint18.py  test_startup_example_seed.py
(+106 files in other folders)
