[project]
name = "aubergeRP"
version = "0.1.0"
description = "A lightweight roleplay frontend with pluggable connectors for LLM and image generation"
authors = [{ name = "Olivier Doucet", email = "webmaster@ajeux.com" }]
keywords = ["roleplay", "llm", "fastapi", "image-generation", "self-hosted"]
requires-python = ">=3.12"
license = "Apache-2.0"
urls = { Homepage = "https://aubergerp.com", Repository = "https://github.com/aubergeRP/aubergeRP" }

[project.optional-dependencies]
sentry = ["sentry-sdk[fastapi]>=2.58.0,<3.0"]

[tool.ruff]
target-version = "py312"
line-length = 125

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"aubergeRP/connectors/base.py" = ["B027"]
"aubergeRP/routers/*.py" = ["B008", "B904"]
"aubergeRP/**/__init__.py" = ["N999"]
"tests/test_character_service.py" = ["E402", "B017"]
"tests/test_config.py" = ["B017"]
"tests/test_models.py" = ["E402", "B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
